# topicaxis-api

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini.tmpl  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 298452951656_initial_public_migration.py
config/: env.template
scripts/: build_docker_images.sh  release_api.sh  run_coverage.sh
tests/: conftest.py  metrics.py
tests/api/routers/: conftest.py  test_articles.py  test_categories.py  test_channels.py  test_documentation.py  test_sources.py  test_tags.py
tests/cli/commands/: test_articles.py  test_users.py
tests/factories/: database.py
tests/fixtures/: database.py  json.py
tests/services/search_articles/: test_search_articles.py
topicaxisapi/: configuration.py  exceptions.py  models.py
topicaxisapi/api/: application.py  dependencies.py  exceptions.py  wsgi.py
topicaxisapi/api/routers/: articles.py  categories.py  channels.py  sources.py  tags.py
topicaxisapi/cli/: command.py
topicaxisapi/cli/commands/: articles.py  users.py
topicaxisapi/cli/resources/: database.py
topicaxisapi/database/: models.py  postgres.py
topicaxisapi/mappers/: base.py
topicaxisapi/mappers/database/: articles.py  categories.py  channels.py  sources.py  tags.py  users.py
topicaxisapi/repositories/: base.py  filters.py  users.py
topicaxisapi/repositories/sqlalchemy/: articles.py  categories.py  channels.py  sources.py  tags.py  users.py
topicaxisapi/services/: exceptions.py
(+12 files in other folders)
